--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,1 +1,26 @@
-<h1>Hello World!...From Astro</h1>
+---
+const name = 'Astro'
+const style = 'green'
+const cars = ['corolla', 'mazda3', 'civic', 'elentra']
+const visible = true
+const response = await fetch(
+  'https://jsonplaceholder.typicode.com/users?_limit=10'
+)
+const users = await response.json()
+---
+
+<h1 class={style}>Hello World!...From {name}</h1>
+<ul>{cars.map((car) => <li>{car}</li>)}</ul>
+
+{visible ? <p>I am visible</p> : <p>I am not visible</p>}
+
+<ul>{users.map((user) => <li>{user.name}</li>)}</ul>
+
+<style>
+  h1 {
+    color: blue;
+  }
+  .green {
+    color: green;
+  }
+</style>
