example of use of props

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,11 @@
+---
+export interface Props {
+  title?: string
+}
+
+const { title = 'Astro Crash Course' } = Astro.props as Props
+---
+
 <!DOCTYPE html>
 <html lang='en'>
   <head>
@@ -10,7 +18,7 @@
       href='https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap'
       rel='stylesheet'
     />
-    <title>Astro Crash Course</title>
+    <title>{title}</title>
   </head>
   <body>
     <slot />
